--- a/hw2/styles.css
+++ b/hw2/styles.css
@@ -28,8 +28,193 @@ form {
 
 /* Code for exercise 01-navbar */
 
+.MBN {
+  background-color: black;
+  display: flex;
+  flex-wrap: nowrap;
+}
+
+.MBN div {
+  width: 100%;
+  text-align: center;
+  font-size: 25px;
+  color: white;
+  padding: 20px;
+}
+
+.MBN div:hover {
+  background-color: purple;
+  border: 2px;
+  border-style: ridge;
+}
+
+@media only screen and (min-width: 415px) and (min-height: 721px){
+  .MBN {
+    flex-wrap: wrap;
+    justify-content: flex-end;
+  }
+
+  .MBN div{
+    width:auto;
+  }
+
+  .card {
+    flex: 100%;
+  }
+}
+
 /* Code for exercise 02-cards */
+
+.Channels{
+  margin: auto;
+}
+.Channels_Time th{
+  background-color: black;
+  color: white;
+  text-align: center;
+}
+th {
+  padding: 15px;
+  border: 3px;
+  border-style: ridge;
+  border-color: black;
+  text-align: left;
+  width: 250px;
+}
+.program th:first-child{
+  background-color: purple;
+  color: white;
+  text-align: center;
+}
+
+.program:hover th:not(th:first-of-type){
+  background-color: orange;
+}
 
 /* Code for exercise 03-table */
 
+.user_info {
+  margin: auto;
+}
+
+.user_info fieldset {
+  border-radius: 15px;
+}
+
+.user_info h1 {
+  text-align: start;
+}
+
+.user_info div{
+  margin: 10px;
+}
+
+label + input {
+  flex: 0 0 200px;
+  float: right;
+  min-width: 200px;
+
+}
+
+.user_info input[type='radio'] + label{
+  font-weight: lighter;
+}
+
+.user_info input[type='radio'] {
+  accent-color: blue;
+}
+
+
+.user_info label{
+  font-weight: bold;
+}
+
+
+.button_list button{
+  font-size: medium;
+  width: 100%;
+  margin: 3px;
+  background-color: black;
+  color: white;
+  border: 2px;
+  border-style: double;
+  border-color: black;
+  padding: 5px;
+}
+
+[id='submit']:hover {
+  background-color: purple;
+  color: white;
+}
+
+button + [id='reset'] {
+  background-color: white;
+  color: black;
+}
+
+[id='reset']:hover {
+  background-color: grey;
+}
+
+.button_list {
+  display: flex;
+  flex-wrap: nowrap;
+}
+
+
+
 /* Code for exercise 04-form */
+
+/* Code below is for five */
+.cards {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 10px;
+}
+
+.card {
+  display: inline-block;
+  flex: 33%;
+  max-width: 30%;
+  margin: 5px;
+  border: 2px;
+  border-style: solid;
+  border-color: black;
+  padding: 15px;
+}
+
+.card h1 {
+  text-align: center;
+  font-weight: bold;
+}
+
+.card img {
+  display: block;
+  margin: auto;
+  width: 100%;
+  height: auto;
+  max-width: 300px;
+  max-height: 300px;
+
+}
+
+.card p {
+  font-weight: lighter;
+  margin-bottom: 10px;
+}
+
+.card .info {
+  margin: auto;
+  width: 100%;
+  padding: 15px;
+  background-color: black;
+  color: white;
+  text-align: center;
+  border: 15px;
+  margin-bottom: auto;
+}
+
+.card .info:hover {
+  color: white;
+  background-color: purple;
+}
