--- a/hw3/styles.css
+++ b/hw3/styles.css
@@ -56,7 +56,7 @@ form {
 label + input {
   flex: 0 0 200px;
   float: right;
-  min-width: 200px;
+  width: 200px;
 }
 
 .user_info input[type="radio"] + label {
